# JHMDBReadAnnotation

./: .gitignore  LICENSE  README.md
JHMDB_MatToYAML/: Matlab2OpenCV.m  runMatlab2OpenCV.m  runMatlab2OpenCV_PM.m
JHMDB_MatToYAML/Enhanced_rdir/: enhanced_rdir.m  rdir.m
JHMDB_MatToYAML/Example/: joint_positions.mat
ReadJHMDBAnnotations/: CMakeLists.txt
ReadJHMDBAnnotations/data/: joint_positions.mat  joint_positions.yaml
ReadJHMDBAnnotations/doc/: CMakeLists.txt
ReadJHMDBAnnotations/src/: ReadJHMDBAnnotations.cpp
